@@ -61,6 +61,12 @@
 # include <unistd.h>
 #endif
 
+#ifdef __MINGW32__
+/* mingw's mkdir() function has 1 argument, but we pass 2 arguments.
+   Therefore we have to disable the argument count checking.  */
+# define mkdir ((int (*)()) mkdir)
+#endif
+
 #include "c-ctype.h"
 #include "error.h"
 #include "javacomp.h"
