@@ -1,3 +1,7 @@
+2003-10-21  Bruno Haible  <bruno@clisp.org>
+
+	* write-java.c (mkdir): Redefine on mingw.
+
 2003-10-12  Bruno Haible  <bruno@clisp.org>
 
 	Improved ObjectiveC support.
