@@ -1,3 +1,7 @@
+2003-10-21  Bruno Haible  <bruno@clisp.org>
+
+	* mkdtemp.c (mkdir): Redefine on mingw.
+
 2003-10-17  Bruno Haible  <bruno@clisp.org>
 
 	* binary-io.h: Avoid warnings on Cygwin.
